@@ -13,6 +13,7 @@ ver. 0.?.? (2007/??/??) - ???
 - Added new filters/actions. Thanks to Yaroslav Halchenko
 - Added Suse init script and modified gentoo-initd. Thanks to
   Christian Rauch
+- Moved every locking statements in a try..finally block
 
 ver. 0.7.7 (2007/02/08) - release candidate
 ----------
